[workspace]
members = [
    "common",
    "server",
    "sdk"
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12", features = ["macros"] }
bincode = "1.3"
crossterm = "0.28"
serde_json = "1.0"
slab = "0.4"
bytes = "1.0"
parking_lot = "0.12"
