[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
bincode = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
